# beamm

./: .gitignore  .gitmodules  README.md  pyproject.toml
beamm/: __init__.py  beamm.py  config.toml  kbnn.py  utils.py
examples/: beamm_example simulated.ipynb  config.toml
